--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand brand" href="#"><i class="fas fa-fire-alt" style="padding-right: 2%;"></i>tindog</a>
+          <a class="navbar-brand brand" href="#">tindog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
